[tool.poetry]
name = "budget-tracker"
version = "1.0.0"
description = "A CLI tool for tracking budget via Plaid API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "budget_tracker", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"
plaid-python = "^9.0.0"
orjson = "^3.11.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
fastapi = "^0.120.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.0.0"
pytest = "^7.0.0"

[tool.poetry.scripts]
budget-tracker = "budget_tracker.cli:main"
api-start = "budget_tracker_api.app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true